set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB_RECURSE PROJECT_SOURCES *.cpp *.h)

add_executable(QPanda_gui ${PROJECT_SOURCES} ${TRANS_FILE} ${RESOURCE_FILE})

qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TRANS_FILE})

target_link_libraries(QPanda_gui PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

set_target_properties(QPanda_gui PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
)

